crates/shipper-chunking/src/snapshots/shipper_chunking__snapshot_tests__snapshot_chunk_5_by_2.snap
---
source: crates/shipper-chunking/src/lib.rs
assertion_line: 116
expression: "chunk_by_max_concurrent(&items, 2)"
---
- - a
  - b
- - c
  - d
- - e
