crates/shipper-chunking/src/snapshots/shipper_chunking__snapshot_tests__snapshot_chunk_empty.snap
---
source: crates/shipper-chunking/src/lib.rs
assertion_line: 146
expression: "chunk_by_max_concurrent(&items, 4)"
---
[]
