crates/shipper-chunking/src/snapshots/shipper_chunking__snapshot_tests__snapshot_chunk_exact_fit.snap
---
source: crates/shipper-chunking/src/lib.rs
assertion_line: 140
expression: "chunk_by_max_concurrent(&items, 3)"
---
- - x
  - y
  - z
