crates/shipper-chunking/src/snapshots/shipper_chunking__snapshot_tests__snapshot_chunk_large_list_by_7.snap
---
source: crates/shipper-chunking/src/lib.rs
assertion_line: 245
expression: "chunk_by_max_concurrent(&items, 7)"
---
[
    [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
    ],
    [
        8,
        9,
        10,
        11,
        12,
        13,
        14,
    ],
    [
        15,
        16,
        17,
        18,
        19,
        20,
        21,
    ],
]
