crates/shipper-chunking/src/snapshots/shipper_chunking__snapshot_tests__snapshot_chunk_max_concurrent_1.snap
---
source: crates/shipper-chunking/src/lib.rs
assertion_line: 134
expression: "chunk_by_max_concurrent(&items, 1)"
---
- - a
- - b
- - c
