crates/shipper-chunking/src/snapshots/shipper_chunking__snapshot_tests__snapshot_chunk_prime_37_by_6.snap
---
source: crates/shipper-chunking/src/lib.rs
expression: lens
---
[
    6,
    6,
    6,
    6,
    6,
    6,
    1,
]
